Fix copyright section being hidden by background

--- a/_sass/_containers.scss
+++ b/_sass/_containers.scss
@@ -31,6 +31,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
     background-image: $body-background-image;
   }
 }
